tests/ui/codegen/evm-ir/validation/parse_after_terminator.evmir
@module AfterTerminator

bb0:
  stop
  invalid //~ ERROR: instruction after terminator in block `bb0`
